--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,99 @@
+@import "tailwindcss";
+
+.bg-gradient {
+  background: var(--gradient);
+}
+/* .bg-background {
+  background: #020817;
+} */
+
+.bg-dots {
+  background-image: radial-gradient(#091e3a 1px, transparent 2);
+  background-size: 20px 20px;
+  background-position: center;
+  opacity: 0.1;
+  z-index: 10;
+}
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #f5faff;
+  --foreground: #0b1a36;
+  --card: #f5faff;
+  --card-foreground: #0b1a36;
+  --popover: #f5faff;
+  --popover-foreground: #0b1a36;
+  --primary: #091e3a;
+  --primary-foreground: #f5faff;
+  --secondary: #c0cad7;
+  --secondary-foreground: #0b1a36;
+  --muted: #002952;
+  --muted-foreground: #8aa6d9;
+  --accent: #6e7ba0;
+  --accent-foreground: #f5faff;
+  --destructive: #f52e2e;
+  --destructive-foreground: #0b1a36;
+  --border: #002952;
+  --input: #002952;
+  --ring: #46527a;
+  --radius: 0.5rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@theme {
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+
+  --color-primary: var(--primary);
+  --color-primary-50: #e6e9eb;
+  --color-primary-100: #ced2d8;
+  --color-primary-200: #9da5b0;
+  --color-primary-300: #6b7889;
+  --color-primary-400: #3a4b61;
+  --color-primary-500: #091e3a;
+  --color-primary-600: #07182e;
+
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.pattern {
+  background-image: linear-gradient(
+    to right,
+    transparent 49.5%,
+    rgba(96, 140, 206, 0.2) 49.5%,
+    rgba(99, 135, 165, 0.6) 50.5%,
+    transparent 50.5%
+  );
+  background-size: 5% 100%;
+  background-position: center;
+  background-repeat: repeat-x;
+  position: static;
 }
